feat: added auth user lambda - Mikhail Dorokhovich
