# internal/models/user.go
@@ -1,15 +1,16 @@
 package models
 
 import (
-	"gorm.io/datatypes"
 	"time"
 )
 
 type User struct {
-	ID        string                       `gorm:"type:uuid;default:gen_random_uuid();primaryKey" json:"id"`
-	Username  string                       `gorm:"unique;" json:"username"`
-	Email     string                       `gorm:"unique;" json:"email"`
-	Providers datatypes.JSONType[[]string] `gorm:"type:jsonb" json:"providers"`
-	CreatedAt time.Time                    `json:"created_at"`
-	UpdatedAt time.Time                    `json:"updated_at"`
+	ID         string `gorm:"type:uuid;default:gen_random_uuid();primaryKey" json:"id"`
+	Username   string `gorm:"unique;" json:"username"`
+	Email      string `gorm:"unique;" json:"email"`
+	ExternalID string `gorm:"not null;" json:"external_id"`
+	Provider   string `gorm:"not null;" json:"provider"`
+
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
 }
